// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Breadcrumbs > matches snapshot when hiding root 1`] = `
<DocumentFragment>
  .c0 {
  align-items: stretch;
  display: flex;
  flex: 1 1 auto;
  flex-direction: row;
  height: inherit;
  margin: 0;
  padding: 0;
}

.c0 >li:first-child {
  position: absolute;
  visibility: hidden;
  pointer-events: none;
}

<ol
    class="c0"
  />
</DocumentFragment>
`;

exports[`Breadcrumbs > matches snapshot when showing root 1`] = `
<DocumentFragment>
  .c0 {
  align-items: stretch;
  display: flex;
  flex: 1 1 auto;
  flex-direction: row;
  height: inherit;
  margin: 0;
  padding: 0;
}

<ol
    class="c0"
  />
</DocumentFragment>
`;
